quartz/styles/custom.scss
@use "./base.scss";
@use "./variables.scss" as *;
/* -- MMW SCSS Modules -- */
@use "./custom/image-adjustments.scss";
@use "./custom/callout-adjustments.scss";
@use "./custom/column-callout.scss";
@use "./custom/caption-callout.scss";
@use "./custom/infobox-callout.scss";
@use "./custom/maintenance-template-callout.scss";
@use "./custom/transclusion-adjustments.scss";

.page-title {
    height: 175px;
}

/* --- MMW Logo on mobile display --- */

@media screen and (max-width:$mobileBreakpoint) {
  .Logo {
    max-height: 185px;
    min-height: 150px;
    max-width: 200px;
    min-width: 150px;
  }
  .page-title {
    height: 150px;
  }
  #quartz-body .sidebar.left {
    margin-top: 0.5rem;
  }  
  .sidebar.left .spacer.mobile-only {
    flex: 0.5 0.5 auto;
  }
}

#explorer-ul {
    max-height: calc(100vh - 400px);
}

img:not(.Logo) {
	cursor:zoom-in;}

img:active:not(.Logo) {
	cursor:zoom-out;
	display:block;
	z-index:100;
	position:fixed;
  max-height:100% !important;
  max-width:100% !important;
  height:100% !important;
  width:100% !important;
  object-fit: contain;
  margin:0 auto !important;
  text-align:center;
  top: 50%;
  transform: translateY(-50%);
  padding:0;
  left:0;
  right:0;
  bottom:0;
  background:var(--background-primary);
}

/* ===================== */

/*---- kbd styling ----*/

kbd {
  font-family: Consolas, "Lucida Console", monospace;
  display: inline-block;
  border-radius: 3px;
  padding: 0px 4px;
  box-shadow: 1px 1px 1px #777;
  margin: 2px;
  font-size: small;
  vertical-align: text-bottom;
  background: #eee;
  font-weight: 500;
  color: #555;
  /*cursor: pointer;*/
  font-variant: small-caps;
  font-weight: 600;
  line-height: 1.1rem;

  /* This two work */
  /* letter-spacing: 0.5px; */
  letter-spacing: 1px;


  /* Prevent selection */
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

kbd:hover, kbd:hover * {
  color: black;
  /* box-shadow: 1px 1px 1px #333; */
}
kbd:active, kbd:active * {
  color: black;
  box-shadow: 1px 1px 0px #ddd inset;
}

kbd kbd {
  padding: 0px;
  margin: 0 1px;
  box-shadow: 0px 0px 0px black;
  vertical-align: baseline;
  background: none;
}

kbd kbd:hover {
  box-shadow: 0px 0px 0px black;
}

kbd:active kbd {
  box-shadow: 0px 0px 0px black;
  background: none;
}

/* ===================== */

/* --- Download Link --- */

a.mmw-download-link:link, a.mmw-download-link:visited {
  background-color: #8f9fa926; 
  border: none;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1.2rem;
  width: 100%;
  transition: .4s;
  padding: 6px;
}

a.mmw-download-link:hover, a.mmw-download-link:active {
  background-color: #8f9fa93d;
}

a.mmw-download-link::before {
  /* display download icon before link text */
  display: inherit;
  vertical-align: middle;
  padding-right: 5px;
}

  /*change svg stroke='' based on dark/light theme*/
[saved-theme="light"]a.mmw-download-link::before {
  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.2rem' height='1.2rem' viewBox='0 0 24 24' fill='none' stroke='%232b2b2b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-download'%3E%3Cpath d='M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4'/%3E%3Cpolyline points='7 10 12 15 17 10'/%3E%3Cline x1='12' x2='12' y1='15' y2='3'/%3E%3C/svg%3E");
}

[saved-theme="dark"]a.mmw-download-link::before {
  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.2rem' height='1.2rem' viewBox='0 0 24 24' fill='none' stroke='%23ebebec' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-download'%3E%3Cpath d='M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4'/%3E%3Cpolyline points='7 10 12 15 17 10'/%3E%3Cline x1='12' x2='12' y1='15' y2='3'/%3E%3C/svg%3E");
}

a.mmw-download-link div.popover {
  display: none;
  /* prevent link popover from appearing */
}

